test/tests/stages/16_characters_and_strings/valid/strings_as_lvalues/adjacent_strings.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[30]:
  int
  identifier(puts)
  (
  char
  *
  identifier(s)
  )
  ;
  int
  identifier(main)
  (
  void
  )
  {
  char
  *
  identifier(strings)
  =
  string literal("Hello,")
  string literal(" World")
  ;
  identifier(puts)
  (
  identifier(strings)
  )
  ;
  return
  const int(0)
  ;
  }
