test/tests/stages/16_characters_and_strings/invalid_types/string_initializer_too_long_nested.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[25]:
  int
  identifier(main)
  (
  void
  )
  {
  char
  identifier(array)
  [
  const int(3)
  ]
  [
  const int(3)
  ]
  =
  {
  string literal("a")
  ,
  string literal("bcde")
  }
  ;
  return
  const int(0)
  ;
  }
